updated readme and notebook

--- a/role_playing_medical_officer.ipynb
+++ b/role_playing_medical_officer.ipynb
@@ -6,11 +6,13 @@
    "source": [
     "### Prompt Hacking\n",
     "\n",
-    "This notebook explores the use of GPT-3 and openAI's API to explore prompt hacking while assigning a fixed role to the chatbot. The goal is to find the an optimum offensive and defensive prompt for a chatbot that is assigned a fixed role. The chatbot is assigned a role of a \"medical officer\". We will try to make the chatbot give bad advises. \n",
+    " When assigning roles to chatbots such as ChatGPT the goal is to enhance the performance of the model and interact with it in a certain way, e.g. a Twitter bot that answeres topic-specific questions. The process of interacting with such a model is called prompting where the inputs to the model are refered to as prompts. However Large Language Models (LLMs) are prone to a variety of attacks often in the form of **Prompt Injection**. Prompt injection is the process of inputting a specific prompt that aims to make the model say unintended things such as to leak sensitive information or to spread misleading information. There several methods to perform such an attack.\n",
+    "\n",
+    " This notebook uses GPT-3.5-turbo and openAI's API to explore prompt hacking of a chatbot thats assigned the role of a medical officer that provides medical advise. The goal is to find both an attack to make the model give false medical advise and a corresponding defense mechanism.\n",
     "\n",
     "    Model used : gpt-3.5-turbo\n",
     "\n",
-    "    Offensive measure : Prompt Injection\n",
+    "    Offensive measure : Misleading Instruction\n",
     "\n",
     "    Defensive measure : Instruction Defense\n",
     "\n"
@@ -65,7 +67,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. The Role - Medical Officer\n"
+    "### 1. The Role - Medical Officer\n",
+    "\n",
+    "First let's explore the role. The model is assigned the role of a medical officer whose job is to provide basic medical advise when asked about certain medical conditions. As you can see below the model works as expected and generates a list of health advises for obese people.\n"
    ]
   },
   {
@@ -117,9 +121,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Attacking - Prompt Injection\n",
+    "### 2. Attacking - Misleading Instruction\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This prompt injection aims to give misleading instructions in order to generate unintended output. In this case the goal is to make the model give bad medical advise."
    ]
   },
   {
