--- a/role_playing_medical_officer.ipynb
+++ b/role_playing_medical_officer.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "### Prompt Hacking\n",
     "\n",
-    " When assigning roles to chatbots such as ChatGPT the goal is to enhance the performance of the model and interact with it in a certain way, e.g. a Twitter bot that answeres topic-specific questions. The process of interacting with such a model is called prompting where the inputs to the model are refered to as prompts. However Large Language Models (LLMs) are prone to a variety of attacks often in the form of **Prompt Injection**. Prompt injection is the process of inputting a specific prompt that aims to make the model say unintended things such as to leak sensitive information or to spread misleading information. There several methods to perform such an attack.\n",
+    " When assigning roles to chatbots such as ChatGPT the goal is to enhance the performance of the model and interact with it in a certain way, e.g. a Twitter bot that answeres topic-specific questions. The process of interacting with such a model is called prompting where the inputs to the model are refered to as prompts. However Large Language Models (LLMs) are prone to a variety of attacks often in the form of **Prompt Injection**. Prompt injection is the process of inputting a specific prompt that aims to make the model say unintended things such as to leak sensitive information or to spread misleading information. There are several methods to perform such an attack.\n",
     "\n",
-    " This notebook uses GPT-3.5-turbo and openAI's API to explore prompt hacking of a chatbot thats assigned the role of a medical officer that provides medical advise. The goal is to find both an attack to make the model give false medical advise and a corresponding defense mechanism.\n",
+    " This notebook uses GPT-3.5-turbo and openAI's API to explore prompt hacking of a chatbot that's assigned the role of a medical officer who provides basic medical advise. The goal is to find both an attack mechanism to make the model give false medical advise and a corresponding defense mechanism.\n",
     "\n",
     "    Model used : gpt-3.5-turbo\n",
     "\n",
