--- a/role_playing_medical_officer.ipynb
+++ b/role_playing_medical_officer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Prompt Hacking\n",
+    "### Exploring Prompt Hacking with GPT-3.5-turbo \n",
     "\n",
     " When assigning roles to chatbots such as ChatGPT the goal is to enhance the performance of the model and interact with it in a certain way, e.g. a Twitter bot that answeres topic-specific questions. The process of interacting with such a model is called prompting where the inputs to the model are refered to as prompts. However Large Language Models (LLMs) are prone to a variety of attacks often in the form of **Prompt Injection**. Prompt injection is the process of inputting a specific prompt that aims to make the model say unintended things such as to leak sensitive information or to spread misleading information. There are several methods to perform such an attack.\n",
     "\n",
